--- a/404.html
+++ b/404.html
@@ -1,1 +1,87 @@
-Sorry this page does not exist =(
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>404 - Not Found</title>
+  <style>
+    ::-moz-selection {
+      background: #b3d4fc;
+      text-shadow: none;
+    }
+
+    ::selection {
+      background: #b3d4fc;
+      text-shadow: none;
+    }
+
+    html {
+      padding: 30px 10px;
+      font-size: 20px;
+      line-height: 1.4;
+      color: #737373;
+      background: #f0f0f0;
+      -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+    }
+
+    html,
+    input {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    }
+
+    body {
+      max-width: 520px;
+      _width: 520px;
+      padding: 30px 20px 50px;
+      border: 1px solid #b3b3b3;
+      border-radius: 4px;
+      margin: 0 auto;
+      box-shadow: 0 1px 10px #a7a7a7, inset 0 1px 0 #fff;
+      background: #fcfcfc;
+    }
+
+    h1 {
+      margin: 0 10px;
+      font-size: 50px;
+      text-align: center;
+    }
+
+    h1 span {
+      color: #bbb;
+    }
+
+    h3 {
+      margin: 1.5em 0 0.5em;
+    }
+
+    p {
+      margin: 1em 0;
+    }
+
+    ul {
+      padding: 0 0 0 40px;
+      margin: 1em 0;
+    }
+
+    .container {
+    max-width: 400px;
+    _width: 400px;
+    margin: 0 auto;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>404 - Not found</h1>
+    <p><b>Sorry, but the page you were trying to view does not exist.</b>
+    </p>
+
+    <a href="http://crazymaster.github.com/">Hello World! - master's blog</a>
+    
+    <p><b>申し訳ありません。ページは削除されたか、URLが変更された可能性があります。</b>
+      <br>
+      トップページへは上のリンクよりどうぞ。
+    </p>
+  </div>
+</body>
+</html>
