--- a/404.html
+++ b/404.html
@@ -1,8 +1,12 @@
+---
+layout: nil
+title : 404 - Not Found
+---
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>404 - Not Found</title>
+  <title>{{ page.title }}</title>
   <style>
     ::-moz-selection {
       background: #b3d4fc;
